kubeflow/kf_user_ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubeflow-user
  labels:
      katib.kubeflow.org/metrics-collector-injection: enabled
