kubeflow/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: elyra-ai
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
      nodePort: 32111
      name: elyra-ai
  selector:
    app: elyra-ai
