kubeflow/ingress-kf-katib-kind.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kfp-ingress
spec:
  rules:
  - host: "katib"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: katib-ui
            port:
              number: 80
